test/integration/bad/function-signatures/stanc.expected
  $ ../../../../../install/default/bin/stanc falling_factorial.stan
Semantic error in 'falling_factorial.stan', line 7, column 26 to column 59:
   -------------------------------------------------
     5:  transformed data {
     6:    real transformed_data_real;
     7:    transformed_data_real = falling_factorial(d_real, r_real);
                                   ^
     8:  }
     9:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'falling_factorial':
(real, real)
Available signatures:
(real, int) => real
  The second argument must be int but got real
(real, array[] int) => array[] real
  The second argument must be array[] int but got real
(real, array[,] int) => array[,] real
  The second argument must be array[,] int but got real
(real, array[,,] int) => array[,,] real
  The second argument must be array[,,] int but got real
(real, array[,,,] int) => array[,,,] real
  The second argument must be array[,,,] int but got real
(Additional signatures omitted)
  $ ../../../../../install/default/bin/stanc rising_factorial.stan
Semantic error in 'rising_factorial.stan', line 7, column 28 to column 60:
   -------------------------------------------------
     5:  transformed parameters {
     6:    real transformed_param_real;
     7:    transformed_param_real =  rising_factorial(d_real, r_real);
                                     ^
     8:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'rising_factorial':
(real, real)
Available signatures:
(real, int) => real
  The second argument must be int but got real
(real, array[] int) => array[] real
  The second argument must be array[] int but got real
(real, array[,] int) => array[,] real
  The second argument must be array[,] int but got real
(real, array[,,] int) => array[,,] real
  The second argument must be array[,,] int but got real
(real, array[,,,] int) => array[,,,] real
  The second argument must be array[,,,] int but got real
(Additional signatures omitted)
  $ ../../../../../install/default/bin/stanc tuple-dataonly-ad.stan
Semantic error in 'tuple-dataonly-ad.stan', line 13, column 12 to column 19:
   -------------------------------------------------
    11:  
    12:  model {
    13:    target += foo(ps);
                     ^
    14:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
((real, real))
Available signatures:
(data (real, real)) => real
  The first argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
  $ ../../../../../install/default/bin/stanc tuple-dataonly-ad2.stan
Semantic error in 'tuple-dataonly-ad2.stan', line 17, column 12 to column 24:
   -------------------------------------------------
    15:  
    16:  model {
    17:    target += foo((x1,x2));
                     ^
    18:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
((real, real))
Available signatures:
(data (real, real)) => real
  The first argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
